--- a/index.html
+++ b/index.html
@@ -1,90 +1,101 @@
+
 <!DOCTYPE html>
 <html lang="tr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+      }
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Roboto', sans-serif;
+      body {
+        background-color: #001c59;
+      }
 
-        }
+      header {
+        color: goldenrod;
+        font-size: 24px;
+        margin-bottom: 24px;
+      }
 
-        body {
-            background: #001f3f;
-        }
+      header > h1,
+      hr {
+        margin: 16px;
+      }
 
-        header>h1#title {
-            font-size: 48px;
-            text-align: center;
-            color: #ffd772;
-            letter-spacing: 2px;
-        }
-
-        main {
-            width: 80%;
-            margin: 0 auto;
-        }
-
-        main p {
-            font-size: 32px;
-            margin-top: 16px;
-            margin-bottom: 16px;
-            text-align: center;
-            color: #DDDDDD;
-        }
-
-        #user-name {
-            color: #ffd772;
-        }
-
-        strong{
-            color: #ffd772;
-        }
+      main {
+        width: 90%;
+        margin: 0 auto;
+        font-size: 24px;
+        color: goldenrod;
+      }
     </style>
-</head>
-
-<body>
+  </head>
+  <body>
     <header>
-        <h1 id="title">Kodluyoruz</h1>
+      <h1>Kodluyoruz</h1>
+      <hr />
     </header>
     <main>
-        <p>
-            Merhaba, <span id="user-name">User</span> Hoşgeldin!
-        </p>
-        <p>
-            <span id="hour">00</span>:<span id="minute"></span>:<span id="second"></span>
-            <span id="day">Default</span>
-        </p>
-        <p>
-            Tarihinde <strong>Kodluyoruz Frontend Web Development Patikası</strong> 'nın
-            Javascript bölümü 1. Ödevindesiniz.
-        </p>
+      Hoşgeldin <span id="user_name">User!</span>
+      <div id="timer">
+        <span id="hour">00</span>
+        <span>:</span>
+        <span id="minute">00</span>
+        <span>:</span>
+        <span id="second">00</span>
+        <span id="day"></span>
+      </div>
+      <p>
+        Tarihinde
+        <strong>Kodluyoruz Frontend Web Development Patikası</strong> 'nın
+        Javascript bölümü 1. Ödevindesiniz.
+      </p>
     </main>
 
     <script>
-        let userInput = prompt('Please enter your name');
-        document.getElementById('user-name').innerHTML = userInput + '!';
+      let check_name = prompt("Adınzı giriniz");
+      document.getElementById("user_name").innerHTML = check_name + "!";
 
-        function pageTimer() {
-            let timer = new Date();
-            let days = ["Pazar", "Pazartesi", "Salı", "Çarşamba", "Perşembe", "Cuma", "Cumartesi"];
-            document.getElementById('hour').innerHTML = ('0' + timer.getHours()).slice(-2);
-            document.getElementById('minute').innerHTML = ('0' + timer.getMinutes()).slice(-2);
-            document.getElementById('second').innerHTML = ('0' + timer.getSeconds()).slice(-2);
-            //Burda kullanılan .slice(-2) ' nin sebebi tek dijit olduğunda başına 0 eklemek için
-            document.getElementById('day').innerHTML = days[timer.getDay()];
+      if (check_name == "") {
+        document.getElementById("user_name").innerHTML = "user!";
+      } else if (check_name == null) {
+        document.getElementById("user_name").innerHTML = "user!";
+      }
 
-        }
-        setInterval(pageTimer, 100); //0.1 saniyede fonksiyonun tekrar edebilmesi için
+      function pageTimer() {
+        let timer = new Date();
+
+        let days = [
+          "Pazar",
+          "Pazartesi",
+          "Salı",
+          "Çarşamba",
+          "Perşembe",
+          "Cuma",
+          "Cumartesi",
+        ];
+
+        document.getElementById("hour").innerHTML = (
+          "0" + timer.getHours()
+        ).slice(-2);
+        document.getElementById("minute").innerHTML = (
+          "0" + timer.getMinutes()
+        ).slice(-2);
+        document.getElementById("second").innerHTML = (
+          "0" + timer.getSeconds()
+        ).slice(-2);
+
+        document.getElementById("day").innerHTML = days[timer.getDay()];
+      }
+      setInterval(pageTimer, 100); //0.1 saniyede fonksiyonun tekrar edebilmesi için
     </script>
-</body>
-
+  </body>
 </html>
